--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=Payforyou
 spring.datasource.url=${MYSQL_URL2}
 spring.datasource.username= ${MYSQL_NAME}
 spring.datasource.password= ${MYSQL_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
